@@ -1,3 +1,3 @@
 class Sanitize
-  VERSION = '1.2.0.dev.20091102'
+  VERSION = '1.2.0.dev.20091104'
 end
