@@ -2,11 +2,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{sanitize}
-  s.version = "1.1.1.dev.20091102"
+  s.version = "1.2.0.dev.20091104"
 
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1") if s.respond_to? :required_rubygems_version=
   s.authors = ["Ryan Grove"]
-  s.date = %q{2009-11-02}
+  s.date = %q{2009-11-04}
   s.email = %q{ryan@wonko.com}
   s.files = ["HISTORY", "LICENSE", "README.rdoc", "lib/sanitize/config/basic.rb", "lib/sanitize/config/relaxed.rb", "lib/sanitize/config/restricted.rb", "lib/sanitize/config.rb", "lib/sanitize/version.rb", "lib/sanitize.rb"]
   s.homepage = %q{http://github.com/rgrove/sanitize/}
