@@ -306,20 +306,23 @@ end
 describe 'transformers' do
   # YouTube transformer
   youtube = lambda do |env|
-    node = env[:node]
-    name = node.name.to_s.downcase
+    node   = env[:node]
+    parent = node.parent
+    name   = node.name.to_s.downcase
 
     return nil unless name == 'param' || name == 'embed'
-    return nil unless node.parent.name.to_s.downcase == 'object'
+    return nil unless parent.name.to_s.downcase == 'object'
 
     if name == 'param'
-      return nil unless movie_node = node.parent.search('param[@name="movie"]')[0]
+      return nil unless movie_node = parent.search('param[@name="movie"]')[0]
       url = movie_node['value']
     elsif name == 'embed'
       url = node['src']
     end
 
-    Sanitize.clean_node!(node.parent, {
+    return nil unless url && url =~ /^http:\/\/(?:www\.)?youtube\.com\/v\//
+
+    Sanitize.clean_node!(parent, {
       :elements   => ['embed', 'object', 'param'],
       :attributes => {
         'embed'  => ['allowfullscreen', 'allowscriptaccess', 'height', 'src', 'type', 'width'],
@@ -328,24 +331,20 @@ describe 'transformers' do
       }
     })
 
-    if url && url =~ /^http:\/\/(?:www\.)?youtube\.com\/v\//
-      return {
-        :whitelist_nodes => [node, node.parent]
-      }
-    end
+    {:whitelist_nodes => [node, parent]}
   end
 
   should 'allow youtube video embeds via the youtube transformer' do
-    input  = '<div><object height="344" width="425"><param name="movie" value="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object></div>'
-    output = Nokogiri::HTML::DocumentFragment.parse('<object height="344" width="425"><param name="movie" value="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>').to_xhtml(:encoding => 'utf-8', :indent => 0, :save_with => Nokogiri::XML::Node::SaveOptions::AS_XHTML)
+    input  = '<div><object foo="bar" height="344" width="425"><b>test</b><param foo="bar" name="movie" value="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object></div>'
+    output = Nokogiri::HTML::DocumentFragment.parse('<object height="344" width="425">test<param name="movie" value="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/a1Y73sPHKxw&hl=en&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>').to_xhtml(:encoding => 'utf-8', :indent => 0, :save_with => Nokogiri::XML::Node::SaveOptions::AS_XHTML)
 
-    Sanitize.clean!(input, :transformers => [youtube]).should.equal(output)
+    Sanitize.clean!(input, :transformers => youtube).should.equal(output)
   end
 
   should 'not allow non-youtube video embeds via the youtube transformer' do
     input  = '<div><object height="344" width="425"><param name="movie" value="http://www.eviltube.com/v/a1Y73sPHKxw&hl=en&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.eviltube.com/v/a1Y73sPHKxw&hl=en&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object></div>'
     output = ''
 
-    Sanitize.clean!(input, :transformers => [youtube]).should.equal(output)
+    Sanitize.clean!(input, :transformers => youtube).should.equal(output)
   end
 end
