@@ -2,7 +2,9 @@ Sanitize History
 ================================================================================
 
 Version 1.2.0.dev (git)
-  * ?
+  * Added support for transformers, which allow you to filter and alter nodes
+    using your own custom logic, on top of (or instead of) Sanitize's core
+    filter. See the README for details.
 
 Version 1.1.1.dev (git)
   * Requires Nokogiri >= 1.4.0.
